// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolve-saga: eventHandler 1`] = `Array []`;

exports[`resolve-saga: eventstoreAdapter.loadEvents 1`] = `Array []`;

exports[`resolve-saga: executeCommand 1`] = `Array []`;

exports[`resolve-saga: executeQuery 1`] = `Array []`;

exports[`resolve-saga: performAcknowledge 1`] = `
Array [
  Array [
    Object {
      "batchId": undefined,
      "result": Object {
        "error": Object {
          "code": null,
          "message": "updating by events is prohibited when \\"test-saga\\" projection is not specified",
          "name": "Error",
          "stack": "Error: updating by events is prohibited when \\"test-saga\\" projection is not specified
    at /Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/wrap-read-model.ts:182:13
    at Generator.next (<anonymous>)
    at /Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/wrap-read-model.ts:8:71
    at new Promise (<anonymous>)
    at Object.<anonymous>.__awaiter (/Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/wrap-read-model.ts:4:12)
    at sendEvents (/Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/wrap-read-model.ts:164:19)
    at /Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/index.ts:50:24
    at Generator.next (<anonymous>)
    at /Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/index.ts:27:71
    at new Promise (<anonymous>)",
        },
        "eventSubscriber": "test-saga",
        "failedEvent": null,
        "successEvent": null,
      },
    },
  ],
  Array [
    Object {
      "batchId": undefined,
      "result": Object {
        "error": Object {
          "code": null,
          "message": "updating by events is prohibited when \\"test-saga\\" projection is not specified",
          "name": "Error",
          "stack": "Error: updating by events is prohibited when \\"test-saga\\" projection is not specified
    at /Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/wrap-read-model.ts:182:13
    at Generator.next (<anonymous>)
    at /Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/wrap-read-model.ts:8:71
    at new Promise (<anonymous>)
    at Object.<anonymous>.__awaiter (/Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/wrap-read-model.ts:4:12)
    at sendEvents (/Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/wrap-read-model.ts:164:19)
    at /Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/index.ts:50:24
    at Generator.next (<anonymous>)
    at /Users/max/resolve/resolve/packages/core/resolve-runtime/src/common/query/index.ts:27:71
    at new Promise (<anonymous>)",
        },
        "eventSubscriber": "test-saga",
        "failedEvent": null,
        "successEvent": null,
      },
    },
  ],
]
`;

exports[`resolve-saga: readModelConnectors['default-connector'].connect 1`] = `
Array [
  Array [
    undefined,
  ],
]
`;

exports[`resolve-saga: readModelConnectors['default-connector'].disconnect 1`] = `
Array [
  Array [
    Object {
      "defineTable": [MockFunction],
      "delete": [MockFunction],
      "find": [MockFunction],
      "insert": [MockFunction],
    },
    undefined,
  ],
]
`;

exports[`resolve-saga: readModelConnectors['default-connector'].drop 1`] = `
Array [
  Array [
    Object {
      "defineTable": [MockFunction],
      "delete": [MockFunction],
      "find": [MockFunction],
      "insert": [MockFunction],
    },
    undefined,
    Object {},
  ],
]
`;

exports[`resolve-saga: readModelStore.defineTable 1`] = `Array []`;

exports[`resolve-saga: readModelStore.delete 1`] = `Array []`;

exports[`resolve-saga: readModelStore.find 1`] = `Array []`;

exports[`resolve-saga: readModelStore.insert 1`] = `Array []`;

exports[`resolve-saga: scheduler.addEntries 1`] = `Array []`;

exports[`resolve-saga: scheduler.clearEntries 1`] = `Array []`;

exports[`resolve-saga: snapshotAdapter.loadSnapshot 1`] = `Array []`;

exports[`resolve-saga: snapshotAdapter.saveSnapshot 1`] = `Array []`;
